
Version 0.8+git, not yet released
---------------------------------

* Stuart Prescott added a `variant` parameter to the `vmdebootstrap`
  plugin.

* Stuart and Lars documented some of the dependencies in README. If
  they're insufficient, report a bug please.

* Stuart added a `qemu-debootstrap` plugin to build images for a
  foreign architecture.

Version 0.8, released 2017-07-29
---------------------------------

* The `mount` plugin can now specify a mount point on an already
  mounted filesystem, such as /boot inside the root filesystem already
  mounted. This allows constructing a system with a separate /boot
  partition. Thanks to Stuart Prescott for reporting the lack of this
  feature.

Version 0.7, released 2017-06-18
---------------------------------

* New plugin `virtuals` provides step `mount-virtual-filesystems` for
  mounting virtual filesystems such as `/proc` and `/dev` as well.

* The `apt` step installs `eatmydata` and runs `apt` under it, to
  speed up package installs.

Version 0.6, released 2017-06-11
---------------------------------

* setup.py now installs the plugins, making the .deb package actually
  be usable.

Version 0.5, released 2017-06-04
---------------------------------

* The "unless:" part of vmdb spec files now actually works. Previously
  it was entrely unimplmented (there was code to implement the check,
  but it was never actually called). The apt and debootstrap plugins
  have been fixed to not do "has rootfs tarball been unpacked" checks
  themselves.

Version 0.4, released 2017-06-03
---------------------------------

* Add a rudimenteary smoke test yarn for vmdb2-built images.

* Add a plugin to run Ansible to configure an image at build time.
  Doing this via Ansible saves me from having to write equivalent
  functionality directly into vmdb2, which would be quite a lot of
  work. (If someone wants puppet, a plugin for that is probably easily
  doable, assuming it can run against a chroot. I don't now, I've